# neutrino_kernel_google_caimito

./: .gitmodules  BUILD.bazel  Kconfig.ext  Kconfig.ext.caimito  Kconfig.ext.comet  Makefile  build.config.caimito  build.config.comet  caimito_defconfig  comet_defconfig  device.bazelrc  lwis_ioctl.c  modem_ctrl_s5100.c  panel-gs-cm4.c  panel-gs-km4.c  panel-gs-tk4a.c  panel-gs-tk4b.c  panel-gs-tk4c-test.c  panel-gs-tk4c.c  s51xx_pcie.c  vendor_dlkm.blocklist.caimito  vendor_dlkm.blocklist.comet  zumapro_defconfig
android/: abi_gki_aarch64_mtk  abi_gki_aarch64_qcom
arch/arm64/configs/: neutrino_caimito_defconfig  neutrino_defconfig  neutrino_zumapro_defconfig  zumapro_defconfig
display/: panel-gs-ct3a.c  panel-gs-ct3b.c  panel-gs-ct3d.c
drivers/android/: binder.c  vendor_hooks.c
drivers/devfreq/: tensor_aio.c
drivers/mmc/core/: card.h
drivers/soc/qcom/: qcom-geni-se.c
drivers/ufs/core/: ufshcd.c
drivers/usb/dwc3/: core.c  core.h  gadget.c
drivers/usb/gadget/: composite.c
drivers/usb/host/: xhci-ring.c  xhci.c  xhci.h
dts/: Makefile  google-dts-ripcurrent  zuma-bts.dtsi  zuma-caimito-common.dtsi  zuma-comet-battery-common.dtsi  zuma-comet-proto1_1-broadcom-gnss.dts  zuma-comet-proto1_1-samsung-gnss.dts  zuma-komodo-battery.dtsi  zuma-ripcurrent24-sapwood-komodo-caiman.dts  zuma-tokay-battery-data.dtsi  zuma-tokay-battery.dtsi  zumapro-board-common.dtsi  zumapro-caimito-bcl.dtsi  zumapro-caimito-common.dtsi  zumapro-caimito-dma-heap.dtsi  zumapro-comet-dvt1.dts  zumapro-comet-evt1-broadcom-gnss.dts  zumapro-comet-evt1-samsung-gnss-wingboard.dts  zumapro-comet-evt1_1-battery.dtsi  zumapro-ripcurrentpro.dts  zumapro-tokay-bcl.dtsi
dts/google/: zuma-caimito-battery.dtsi  zuma-caimito-common.dtsi  zuma-comet-battery-common.dtsi  zuma-comet-common.dtsi  zuma-tokay-connector.dtsi  zumapro-caimito-bcl.dtsi  zumapro-caimito-common.dtsi  zumapro-comet-common.dtsi
fs/: dcache.c  exec.c  namei.c  namespace.c  open.c  proc_namespace.c  readdir.c  select.c  stat.c  statfs.c  susfs.c
fs/f2fs/: data.c  f2fs.h  file.c  namei.c  segment.c  segment.h
fs/proc/: bootconfig.c
google-devices/: Kconfig.ext  Makefile
google-devices/caimito/: Kconfig.ext.caimito  build_caimito.sh  device.bazelrc  vendor_dlkm.blocklist.caimito
google-devices/caimito/dts/: zuma-caimito-battery.dtsi  zuma-komodo-battery-data.dtsi  zuma-komodo-battery.dtsi  zuma-ripcurrent24-display.dtsi  zuma-ripcurrent24-sapwood-tokay.dts  zuma-ripcurrent24.dts  zumapro-ripcurrentpro-bcl-sapwood.dtsi  zumapro-ripcurrentpro-sapwood-caimito-common.dtsi
google-devices/comet/: device.bazelrc  vendor_dlkm.blocklist.comet
google-devices/comet/display/: panel-gs-ct3c.c  panel-gs-ct3e.c
google-devices/comet/dts/: zuma-comet-proto1-broadcom-gnss.dts  zuma-comet-proto1-samsung-gnss.dts  zuma-comet-proto1_1-samsung-gnss-wingboard.dts  zumapro-comet-bcl.dtsi  zumapro-comet-common.dtsi  zumapro-comet-evt1-samsung-gnss-6layerflex.dts  zumapro-comet-evt1-samsung-gnss-sdc.dts  zumapro-comet-evt1-samsung-gnss.dts  zumapro-comet-evt1_1-battery.dtsi  zumapro-comet-evt1_1.dts  zumapro-comet-mp.dts  zumapro-comet-pvt1.dts
google-devices/zuma/: zuma_defconfig
google-devices/zuma/dts/: zuma.dtsi
google-modules/: Kconfig  Makefile
google-modules/amplifiers/cs40l26/: cs40l26.c
google-modules/amplifiers/tas25xx/src/: tas25xx-regbin-parser.c
google-modules/aoc/alsa/: aoc_alsa_hw.c
google-modules/bms/: OWNERS  google_battery.c  google_bms.h  google_charger.c  max1720x_battery.c  max77759_charger.c  max77779_charger.c  max77779_fg.c  p9221_charger.c
google-modules/bms/misc/: logbuffer.h
google-modules/display/common/gs_panel/: gs_panel.c  gs_panel_connector_funcs.c
google-modules/display/common/include/gs_panel/: gs_panel.h
google-modules/display/panels/caimito/: BUILD.bazel  panel-gs-cm4.c  panel-gs-km4.c  panel-gs-tk4a.c  panel-gs-tk4b.c  panel-gs-tk4c.c
google-modules/display/samsung/: exynos_drm_decon.c  exynos_drm_dsim.c
google-modules/edgetpu/rio/drivers/edgetpu/: Kbuild  edgetpu-telemetry.h
google-modules/gxp/zuma/: Makefile
google-modules/lwis/platform/casablanca/: lwis_platform_casablanca.c
google-modules/power/mitigation/: google_bcl_core.c  google_bcl_sysfs.c
google-modules/radio/samsung/s5400/: modem_ctrl_s5100.c  s51xx_pcie.c
google-modules/soc/gs/drivers/pci/controller/dwc/: pcie-exynos-rc.c
google-modules/soc/gs/drivers/soc/google/: exynos-pd_hsi0.c
google-modules/soc/gs/drivers/ufs/: ufs-pixel.c
google-modules/touch/common/: goog_touch_interface.c
google-modules/touch/synaptics/syna_gtd/: syna_tcm2.c  syna_tcm2_testing.c
google-modules/wlan/bcm4390/: Kbuild  dhd.h  dhd_linux.c  dhd_pcie.c  dhd_pcie_linux.c  wl_android.c  wl_cfgscan.c  wl_cfgvendor.c
google-modules/wlan/bcm4398/: Kbuild  dhd_pcie.c
gs_panel/: drm_bridge_funcs.c  gs_panel.c
include/gs_panel/: gs_panel.h
include/linux/: bpf.h  mount.h  sched.h  susfs.h  susfs_def.h
include/linux/mmc/: card.h
include/linux/sched/: user.h
include/linux/soc/qcom/: geni-se.h
include/net/: net_namespace.h  sock.h
include/ufs/: ufshcd.h
io_uring/: io_uring.c
kernel/: Makefile  core_hook.c  fork.c  kallsyms.c  sucompat.c  sys.c
kernel/bpf/: ringbuf.c  syscall.c  verifier.c
kernel/irq/: sbalance.c
kernel/printk/: printk.c
kernel/sched/: core.c  fair.c  psi.c  sched.h
kernel/time/: hrtimer.c
mm/: internal.h  page_alloc.c  shmem.c  vmscan.c
net/bluetooth/: hci_core.c  hci_sync.c  l2cap_core.c  l2cap_sock.c
net/core/: dev.c  net_namespace.c
net/ipv4/: inet_connection_sock.c
net/ipv6/: af_inet6.c  route.c
net/vmw_vsock/: virtio_transport_common.c
net/wireless/: nl80211.c
syna_gtd/: syna_tcm2.c
